# S.A.G.E

./: .env.example  .gitignore  LICENSE  README.md
sage/: .env.example  SDunit1.txt  SDunit2.txt  SDunit3.txt  __init__.py  config.py  fix_auth.py  main.py  pyproject.toml  simulate.py  test_auth.py  test_info.py  test_planner.py  test_studio.py  test_writer.py  unit1.txt  unit2.txt
sage/core/: __init__.py  chat.py  pipeline.py  state.py
sage/core/nodes/: __init__.py  evaluator.py  planner.py  publisher.py  retriever.py  studio.py  writer.py
sage/prompts/: __init__.py  evaluator_prompt.py  planner_prompt.py  writer_prompt.py
sage/ui/: __init__.py  panels.py  progress.py  theme.py
